# binoculars

./: .readthedocs.yaml  CHANGELOG.md  Cargo.toml  Pipfile  README.md  pyproject.toml
.github/workflows/: CI.yml  python.yml  rust.yml
docs/: conf.py  index.rst
docs/source/: binoculars.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/source/modules/: cluster.rst  linear.rst
python/binoculars/: __init__.py  cluster.py  linear.py
python/binoculars/cluster/: cluster.py
python/binooculars/cluster/: __init__.py
python/binooculars/linear/: __init__.py  linear.py
src/: lib.rs
src/cluster/: dist.rs  kmeans.rs
src/linear/: regression.rs  utils.rs
